--- a/.gitignore
+++ b/.gitignore
@@ -233,3 +233,6 @@ Docs
 Contact
 Manage cookies
 Do not share my personal information
+/AdventOfCode2024/.vs/AdventOfCode2024
+/.vs/AdventOfCode2024
+/.vs
